--- a/flutterRender/index.html
+++ b/flutterRender/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-  <base href="/lottiemon/flutterRender/">
+  <base href="/flutterRender/">
 
   <meta charset="UTF-8">
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
