updated meta title/description and image

--- a/index.html
+++ b/index.html
@@ -4,7 +4,28 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>lottiemon</title>
+  <title>Lottiemon | Quick & Free Lottie Editor</title>
+
+  <meta name="title" content="Lottiemon | Quick & Free Lottie Editor">
+  <meta name="description"
+    content="A powerful, browser-based quick Lottie editor that keeps your data private and local.">
+
+  <meta property="og:type" content="website">
+  <meta property="og:url" content="https://lottiemon.xyz/">
+  <meta property="og:title" content="Lottiemon | Quick & Free Lottie Editor">
+  <meta property="og:description"
+    content="A powerful, browser-based quick Lottie editor that keeps your data private and local.">
+  <meta property="og:image" content="https://lottiemon.xyz/social-preview.png">
+
+  <meta property="twitter:card" content="summary_large_image">
+  <meta property="twitter:url" content="https://lottiemon.xyz/">
+  <meta property="twitter:title" content="Lottiemon | Quick & Free Lottie Editor">
+  <meta property="twitter:description"
+    content="A powerful, browser-based quick Lottie editor that keeps your data private and local.">
+  <meta property="twitter:image" content="https://lottiemon.xyz/social-preview.png">
+
+
+
   <link rel="icon" href="assets/favicon.svg" type="image/svg+xml">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -291,7 +312,7 @@
           <h3 id="dotLottieExportLabel">Dot Lottie</h3>
           <div class="json-header-controls">
             <button id="openStateMachineBuilderBtn" class="state-machine-pill" type="button"
-              title="Open State Machine Editor" style="display: none;">
+              title="Open State Machine Editor">
 
               <svg class="pill-default-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                 <path
