disabled statemachinebuilder button

--- a/index.html
+++ b/index.html
@@ -311,7 +311,7 @@
         <div class="json-header">
           <h3 id="dotLottieExportLabel">Dot Lottie</h3>
           <div class="json-header-controls">
-            <button id="openStateMachineBuilderBtn" class="state-machine-pill" type="button"
+            <button id="openStateMachineBuilderBtn" style="display: none;" class="state-machine-pill" type="button"
               title="Open State Machine Editor">
 
               <svg class="pill-default-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
