--- a/demo/index.html
+++ b/demo/index.html
@@ -197,6 +197,22 @@
 <body>
 
     <div id="container">
+        <!-- Mobile Warning Overlay -->
+        <div
+            class="fixed inset-0 z-[9999] bg-gray-50 flex flex-col items-center justify-center p-8 text-center lg:hidden">
+            <div class="w-16 h-16 bg-emerald-100 text-emerald-600 rounded-full flex items-center justify-center mb-6">
+                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
+                    stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
+                    <rect width="20" height="14" x="2" y="3" rx="2" />
+                    <line x1="8" x2="16" y1="21" y2="21" />
+                    <line x1="12" x2="12" y1="17" y2="21" />
+                </svg>
+            </div>
+            <h2 class="text-2xl font-bold text-gray-900 mb-2">Desktop Required</h2>
+            <p class="text-gray-600 max-w-md">
+                Lottiemon is optimized for desktop and laptop use. Please open this page on a larger screen.
+            </p>
+        </div>
         <!-- Loader -->
         <div id="loading-overlay" class="flex flex-col items-center gap-8">
             <div class="fun-loader">
