--- a/demo/index.html
+++ b/demo/index.html
@@ -199,7 +199,7 @@
     <div id="container">
         <!-- Mobile Warning Overlay -->
         <div
-            class="fixed inset-0 z-[9999] bg-gray-50 flex flex-col items-center justify-center p-8 text-center lg:hidden">
+            class="fixed inset-0 z-[9999] bg-gray-50 flex flex-col items-center justify-center p-8 text-center sm:hidden">
             <div class="w-16 h-16 bg-emerald-100 text-emerald-600 rounded-full flex items-center justify-center mb-6">
                 <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" viewBox="0 0 24 24" fill="none"
                     stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
