--- a/demo/index.html
+++ b/demo/index.html
@@ -35,6 +35,24 @@
             display: block;
             transition: opacity 0.8s cubic-bezier(0.4, 0, 0.2, 1);
             opacity: 0;
+            max-width: 100%;
+            aspect-ratio: 1575 / 1260;
+            height: auto !important;
+        }
+
+        @media (max-width: 640px) {
+            #cta-pill {
+                transform-origin: bottom right;
+                transform: scale(0.8);
+            }
+
+            #cta-pill.visible {
+                transform: scale(0.8);
+            }
+
+            #cta-pill:active {
+                transform: scale(0.75);
+            }
         }
 
         #loading-overlay {
@@ -197,15 +215,7 @@
 <body>
 
     <div id="container">
-        <!-- Mobile Warning Overlay -->
-        <div
-            class="fixed inset-0 z-[9999] bg-gray-50 flex flex-col items-center justify-center p-8 text-center sm:hidden">
-            <img src="../assets/desktop only.png" alt="Desktop Required" class="w-48 mb-6">
-            <h2 class="text-2xl font-bold text-gray-900 mb-2">Desktop Required</h2>
-            <p class="text-gray-600 max-w-md">
-                Lottiemon is optimized for desktop and laptop use. Please open this page on a larger screen.
-            </p>
-        </div>
+
         <!-- Loader -->
         <div id="loading-overlay" class="flex flex-col items-center gap-8">
             <div class="fun-loader">
@@ -243,7 +253,7 @@
         const CONFIG = {
             dotLottieUrl: "https://github.com/lottiemon/lottiemonDemo/blob/c06465785e65fdc3713352adf6bd6002f43fb324/lottiemon_education.lottie",
             width: "900px",
-            height: "900px",
+            height: "720px",
             stateMachineId: "stateMachine",
 
             // --- TAB LOGO / FAVICON CONFIG ---
@@ -268,10 +278,10 @@
                 gap: "12px",
 
                 animation: {
-                    pillTimeout: 15000,
+                    pillTimeout: 3000,
 
                     // --- HIGHLIGHT LOOP CONFIG ---
-                    highlightInitialDelay: 5000,
+                    highlightInitialDelay: 15000,
                     highlightInterval: 3000,
                     highlightDuration: "1.2s",
                     highlightOpacity: 0.5,
