--- a/demo/index.html
+++ b/demo/index.html
@@ -42,16 +42,54 @@
 
         @media (max-width: 640px) {
             #cta-pill {
-                transform-origin: bottom right;
-                transform: scale(0.8);
+                /* Reset/Override JS inline styles */
+                top: auto !important;
+                right: 24px !important;
+                left: 24px !important;
+                width: auto !important;
+
+                /* Slide up setup */
+                bottom: -100px !important;
+                border-radius: 9999px !important;
+
+                /* Override transition */
+                transition: bottom 0.6s cubic-bezier(0.2, 0.8, 0.2, 1) !important;
+
+                /* Center transform for pulse */
+                transform-origin: center center;
+                transform: scale(1);
             }
 
             #cta-pill.visible {
-                transform: scale(0.8);
+                bottom: 24px !important;
+                transform: scale(1);
+                /* Ensure it's visible */
             }
 
             #cta-pill:active {
-                transform: scale(0.75);
+                transform: scale(0.98);
+            }
+
+            .highlight-trigger {
+                animation-name: pill-highlight-pulse-mobile;
+            }
+        }
+
+        /* Mobile specific pulse animation: Subtle breath */
+        @keyframes pill-highlight-pulse-mobile {
+            0% {
+                transform: scale(1);
+                box-shadow: 0 0 0 0 var(--glow-start), 0 4px 12px -2px rgba(0, 0, 0, 0.1);
+            }
+
+            50% {
+                transform: scale(1.005);
+                box-shadow: 0 0 0 12px var(--glow-end), 0 8px 24px -4px rgba(0, 0, 0, 0.2);
+            }
+
+            100% {
+                transform: scale(1);
+                box-shadow: 0 0 0 0 var(--glow-start), 0 4px 12px -2px rgba(0, 0, 0, 0.1);
             }
         }
 
@@ -162,6 +200,9 @@
             }
         }
 
+
+
+
         .highlight-trigger {
             animation-name: pill-highlight-pulse;
             animation-fill-mode: both;
@@ -263,7 +304,7 @@
 
             // --- CANVAS LAYOUT CONFIG ---
             canvasVerticalOffset: "-8px",
-            mobileCanvasVerticalOffset: "-0px",
+            mobileCanvasVerticalOffset: "-10px",
 
             ctaMode: "auto",
 
