hid the build statemachine button

--- a/index.html
+++ b/index.html
@@ -315,8 +315,8 @@
         <div class="json-header">
           <h3 id="dotLottieExportLabel">Dot Lottie</h3>
           <div class="json-header-controls">
-            <button id="openStateMachineBuilderBtn" style="display: none;" class="state-machine-pill" type="button"
-              title="Open State Machine Editor">
+            <button id="openStateMachineBuilderBtn" style="display: none; pointer-events: none; opacity: 0;"
+              class="state-machine-pill" type="button" title="Open State Machine Editor">
 
               <svg class="pill-default-icon" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
                 <path
